--- a/page2.html
+++ b/page2.html
@@ -6,6 +6,6 @@ Above adulthood diet
 </head>
 <body>
 <h3 style="color:red;text-align:center;">Nutrient chart</h3>
-<img width="100%" src="women.jpg">
+<img height="100%" width="100%" src="women.jpg">
 </body>
 </html>
