--- a/page3.html
+++ b/page3.html
@@ -5,6 +5,6 @@ COMMON DIET CHART
 </title>
 </head>
 <body>
-<img width="100%" src="normal.jpg">
+<img height="100%" width="100%" src="normal.jpg">
 </body>
 </html>
