--- a/page1.html
+++ b/page1.html
@@ -6,6 +6,6 @@ ADULTS
 </head>
 <body>
 <h2> Adults Nutrients Requirements <h2>
-<img width="100%" src="adult.png">
+<img width="100%" height="100%" src="adult.png">
 </body>
 </html>
