--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ margin-right: auto;
 <h1 style="color:orange;text-align:center;">FOOD</h1>
 <p><h3>Food is one of the basic necessities of life. Food contains nutrients—substances essential for the growth, repair, and maintenance of body tissues and for the regulation of vital processes. Nutrients provide the energy our bodies need to function. The energy in food is measured in units called calories</h3></p>
 <image width="40%" src="health.jpg">
-<h2>For More details about food</h2><a href="page.html"><h2>ClickHere</h2></a>    
+<h2 style="text-align: center;">For More details about food</h2><a href="page.html"><h2>ClickHere</h2></a>    
 
 </body>
 </html>
